# AgenticAI

./: .gitignore  main.py  pyproject.toml  requirements.txt
updatedlangchain/: 1-langchainintro.ipynb  2-modelintegration.ipynb  3-messages.ipynb  4-tools.ipynb  5-structuredoutput.ipynb  6-Middlewares.ipynb
