[project]
name = "langchain-v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "langchain>=1.3.14",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.7",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.5",
    "python-dotenv>=1.2.2",
]
